--- a/package.json
+++ b/package.json
@@ -6,10 +6,24 @@
   "scripts": {
     "test": "jest"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
-  "keywords": ["eventbus","pub/sub"],
+  "engines": {
+    "node": ">=12"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/jumpfoxltd/broker.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "eventbus",
+    "publisher",
+    "subscriber",
+    "broker"
+  ],
   "author": "Fokion Sotiropoulos",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-standard": "^14.1.1",
